# Incident-Tracker-with-FastAPI

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
PageError/: index.html
app/: main.py
app/api/v1/: dependencies.py  router.py
app/api/v1/endpoints/: incidents.py  monitoring.py  technician.py  users.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: __init__.py  incident.py  incident_history_models.py  incident_models.py  users.py  users_models.py
app/repositories/: incident_repository.py  technician.py  technician_repositories.py  users_repository.py
app/schemas/: custom_schema.py  incident.py  incident_schema.py  user.py  user_schema.py
migrations/: env.py
migrations/versions/: 650f28c8c862_create_tables.py  a7972b97c194_create_tables.py  ab05bd66dd57_create_table_users_and_incident.py  caecad4e57c1_create_tables.py
tests/: conftest.py  test_check_db.py  test_incidents.py  test_serve_auten_&_config.py  test_tech.py  test_users.py
